# QtModuleTest

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mod.cppm  pure_cpp.cpp  pure_cpp.h
